# libwarc

./: .gitignore  .gitlab-ci.yml  ABI.ChangeLog  AUTHORS  Makefile.am  NEWS  README.md  bootstrap  bootstrap.conf  cfg.mk  configure.ac
docs/: Doxyfile.in
examples/: main.c
include/: libwarc.h
lib/: Makefile.am
src/: libwarc_main.c
tests/: main.cc  test.c
